WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
16125
[GTK] Up key doesn't work properly when content is editable
https://bugs.webkit.org/show_bug.cgi?id=16125
Summary
[GTK] Up key doesn't work properly when content is editable
Alp Toker
Reported
2007-11-24 19:01:58 PST
Bug due to a missing 'break' in a switch.
Attachments
Trivial fix, add 'break'
(1.49 KB, patch)
2007-11-24 19:06 PST
,
Alp Toker
mrowe
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Alp Toker
Comment 1
2007-11-24 19:06:01 PST
Created
attachment 17494
[details]
Trivial fix, add 'break'
Mark Rowe (bdash)
Comment 2
2007-11-24 19:37:58 PST
Comment on
attachment 17494
[details]
Trivial fix, add 'break' r=me
Alp Toker
Comment 3
2007-11-24 19:43:39 PST
Landed in
r28011
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug